--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
+    "mongoose": "^8.8.4",
     "socket.io": "^4.8.1"
   }
 }
